# $Id$

2008-04-26	Denis M. Gabaidulin

	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator
	filter were merged from 0.10.

2008-04-16	Ivan Y. Khvostishkov

	* core/Exceptions/DatabaseIsDownException.class.php: when connect
	fails.

2008-04-13	Konstantin V. Arkhipov

	* core/Cache/SemaphorePool.class.php: DirectoryLocker is the default
	locker now.

2008-04-09	Ivan Y. Khvostishkov

	* core/Form/Primitives/BasePrimitive.class.php: spawn() method for
	cloning primitives. It's one of the possible soft-tricks to implement
	anonymous primitives.

2008-04-03	Denis M. Gabaidulin

	* meta/classes/MetaConfiguration.class.php: lazy fetching strategy
	support for SpookedClass properties.

2008-04-02	Ivan Y. Khvostishkov

	* main/Application/: refactoring. Added test cases for HttpRewriter.

	* core/Base/Scope.class.php: simple but useful wrapper for arrays.

2008-04-01	Ivan Y. Khvostishkov

	* main/Application/ApplicationUrl.class.php: now reference methods
	return not a strings, but ApplicationUrl itself. Use below wrappers for
	back compatibility.

	* main/Application/HtmlUrl.class.php,
	main/Application/RedirectUrl.class.php: helpers for views and
	controllers.

2008-03-31	Ivan Y. Khvostishkov

	* core/Form/Primitives/BasePrimitive.class.php: Assert::isArray() added
	to import()

	* main/EntityProto/Builders/ObjectToObjectCast.class.php: useful to
	cast one class to another.

2008-03-31	Konstantin V. Arkhipov

	* global.inc.php.tpl: added cache invalidation upon failed include
	from cached location; solves class moving case.

2008-03-29	Ivan Y. Khvostishkov

	* main/Net/HttpUrl.class.php: toHttpRequest() helper.

	* main/Application/: refactoring of ApplicationUrl. New classes:
	HttpRewriter, ApplicationRequestScope. Removed class:
	ScopeNavigationSchema (use rewriter instead).

2008-03-28	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php: now rotates
	queue upon overflow, it's the same strategy as in
	SharedMemorySegmentHandler.